# scitex-parallel

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: cla.yml  publish-pypi.yml  test.yml
src/scitex_parallel/: __init__.py  _run.py
src/scitex_parallel/_skills/: SKILL.md  patterns.md  run.md
src/scitex_parallel/_skills/scitex-parallel/: 01_quick-start.md  SKILL.md
tests/: test__run.py
