[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-parallel"
version = "0.1.1"
description = "Thread/process pool parallel execution utilities"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Watanabe" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-parallel"
Repository = "https://github.com/ywatanabe1989/scitex-parallel"
Issues = "https://github.com/ywatanabe1989/scitex-parallel/issues"

[project.entry-points."scitex_dev.docs"]
scitex-parallel = "scitex_parallel"

[project.entry-points."scitex_dev.skills"]
scitex-parallel = "scitex_parallel"

[tool.hatch.build.targets.wheel]
packages = ["src/scitex_parallel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
